--- a/publication/relmobnet/cite.bib
+++ b/publication/relmobnet/cite.bib
@@ -7,7 +7,7 @@
   
   keywords = {Computer Vision and Pattern Recognition (cs.CV), Robotics (cs.RO), FOS: Computer and information sciences, FOS: Computer and information sciences},
   
-  title = {RELMOBNET: A Robust Two-Stage End-To-End Training Approach For MOBILENETV3 Based Relative Camera Pose Estimation},
+  title = {RelMobNet: End-to-end relative camera pose estimation using a robust two-stage training},
   
   publisher = {arXiv},
   
